# xctopus-core

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  repository.yaml  requirements.txt
examples/: validate_basic.py
notebooks/: quickstart.ipynb  xctopus_training_evaluation.ipynb
scripts/cli/: __init__.py  xctopus_run.py
src/xctopus/: __init__.py  data_manager.py  evaluation.py  filter_bayesian.py  fusion.py  knowledgenode.py  logger_config.py  main.py  orchestrator.py  post_processing.py  repository.py  settings.py  transformer_base.py
src/xctopus/core/config/: __init__.py
src/xctopus/modules/: lora.py
src/xctopus/nodes/: __init__.py
src/xctopus/nodes/bayesian/: __init__.py  bayesian_filter.py  bayesian_node.py  utils.py
src/xctopus/nodes/bayesian/core/: __init__.py  text_preprocessor.py
src/xctopus/nodes/bayesian/utils/: __init__.py  cluster_analyzer.py  cluster_utils.py  clustering_config.py  learning_auditor.py  learning_evaluator.py  lora_auditor.py
src/xctopus/nodes/transformer/: __init__.py  transformer.py
src/xctopus/pipeline/: __init__.py  config.py  pipeline.py
src/xctopus/pipeline/steps/: __init__.py  analysis.py  audit.py  base.py  clustering.py  config_update.py  evaluation.py  fine_tune.py  optimize.py
src/xctopus/scripts/: __init__.py
src/xctopus/scripts/cli/: __init__.py  xctopus_run.py
tests/: __init__.py  test_analysis_step.py  test_audit_step.py  test_cli_basic.py  test_clustering_step.py  test_config_update_step.py  test_config_yaml.yaml  test_dataset_sample.csv  test_evaluation_step.py  test_exports.py  test_fine_tune_step.py  test_optimize_step.py  test_pipeline_aliases.py  test_pipeline_basic.py  test_pipeline_checkpointing.py  test_pipeline_config.py  test_pipeline_config_phase2.py  test_pipeline_graph.py  test_pipeline_run_phase6.py  test_pipeline_step.py  test_plugin_system.py  test_run_full_pipeline.py
