[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xctopus"
version = "0.1.0"
description = "A hierarchical continuous learning framework combining Transformers and Bayesian Nodes"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Xctopus Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=1.9.0",
    "numpy>=1.21.0,<2.0",  # Para serialización eficiente de tensores FP16
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "sentence-transformers>=2.0.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.60.0",
    "faiss-cpu>=1.13.0",
    "transformers>=4.0.0",  # Para AutoModelForCausalLM, AutoTokenizer
    "peft>=0.12.0",  # Para LoRA adapters (PeftModel, LoraConfig, get_peft_model)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
telemetry = [
    "rich>=13.0.0",  # Para tabla de telemetría mejorada (fallback a texto plano si no está disponible)
]
monitoring = [
    "psutil>=5.9.0",  # Para métricas del sistema (memoria, CPU, I/O) - fallback disponible si no está instalado
]
all = [
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/msancheza/xctopus-core"
Repository = "https://github.com/msancheza/xctopus-core"
Issues = "https://github.com/msancheza/xctopus-core/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

# Scripts removed - CLI not implemented in Layer 1
# [project.scripts]
# xctopus-run = "xctopus.scripts.cli.xctopus_run:main"

# [tool.setuptools.scripts]
# xctopus-run = "xctopus.scripts.cli.xctopus_run:main"

# ============================================================================
# Code Formatting and Linting Configuration
# ============================================================================

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E203", "E501"]  # E203: conflicto con Black, E501: line too long (manejado por Black)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# Pytest Configuration
# ============================================================================
# Tests folder removed - legacy code not compatible with Layer 1
# Pytest configuration kept for future test development

# [tool.pytest.ini_options]
# testpaths = ["tests"]
# python_files = ["test_*.py"]
# python_classes = ["Test*"]
# python_functions = ["test_*"]
# addopts = [
#     "-v",
#     "--strict-markers",
#     "--tb=short",
# ]
# markers = [
#     "unit: Unit tests",
#     "integration: Integration tests",
#     "concurrency: Concurrency tests",
#     "performance: Performance benchmarks",
#     "smoke: Smoke tests for existing code",
# ]
# filterwarnings = [
#     "error",
#     "ignore::DeprecationWarning",
# ]

# [tool.coverage.run]
# source = ["src/xctopus"]
# omit = [
#     "*/tests/*",
#     "*/venv/*",
#     "*/__pycache__/*",
# ]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

